# HKT-public-chain-source-code

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  ATTRIBUTIONS.md  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  METRICS.md  Makefile  README.md  SECURITY.md  deny.toml
chain/chain/: Cargo.toml
chain/chain-primitives/: Cargo.toml  README.md
chain/chain-primitives/src/: error.rs
chain/chain/src/: block_processing_utils.rs  blocks_delay_tracker.rs  chain.rs  crypto_hash_timer.rs  doomslug.rs  lib.rs  lightclient.rs  metrics.rs  migrations.rs  missing_chunks.rs  store.rs  store_validator.rs  test_utils.rs  types.rs  validate.rs
chain/chain/src/store_validator/: validate.rs
chain/chain/src/test_utils/: validator_schedule.rs
chain/chain/src/tests/: challenges.rs  doomslug.rs  gc.rs  mod.rs  simple_chain.rs  sync_chain.rs
chain/chunks/: Cargo.toml  README.md
chain/chunks-primitives/: Cargo.toml  README.md
chain/chunks-primitives/src/: error.rs
chain/chunks/src/: chunk_cache.rs  lib.rs  metrics.rs  test_utils.rs
chain/client/: Cargo.toml
chain/client-primitives/: Cargo.toml
chain/client-primitives/src/: debug.rs  types.rs
chain/client/src/: client.rs  client_actor.rs  debug.rs  info.rs  lib.rs  metrics.rs  rocksdb_metrics.rs  sync.rs  test_utils.rs  view_client.rs
chain/client/src/tests/: bug_repros.rs  catching_up.rs  chunks_management.rs  consensus.rs  cross_shard_tx.rs  query_client.rs
chain/epoch-manager/: Cargo.toml  README.md
chain/epoch-manager/src/: adapter.rs  lib.rs  proposals.rs  reward_calculator.rs  shard_assignment.rs  test_utils.rs  types.rs  validator_selection.rs
chain/epoch-manager/src/tests/: mod.rs  random_epochs.rs
chain/indexer/: CHANGELOG.md  Cargo.toml  README.md
chain/indexer-primitives/: Cargo.toml  README.md
chain/indexer-primitives/src/: lib.rs
chain/indexer/src/: lib.rs
chain/indexer/src/streamer/: fetchers.rs  metrics.rs  mod.rs  utils.rs
chain/jsonrpc/: CHANGELOG.md  Cargo.toml  README.md  build_errors_schema.sh
chain/jsonrpc-adversarial-primitives/: Cargo.toml
chain/jsonrpc-adversarial-primitives/src/: lib.rs
chain/jsonrpc-primitives/: Cargo.toml
chain/jsonrpc-primitives/src/: errors.rs  message.rs
chain/jsonrpc-primitives/src/types/: blocks.rs  changes.rs  chunks.rs  config.rs  gas_price.rs  light_client.rs  network_info.rs  query.rs  receipts.rs  sandbox.rs  status.rs  transactions.rs  validator.rs
chain/jsonrpc/client/: Cargo.toml
chain/jsonrpc/client/src/: lib.rs
chain/jsonrpc/fuzz/: Cargo.toml
chain/jsonrpc/jsonrpc-tests/: Cargo.toml
chain/jsonrpc/res/: debug.html  epoch_info.html
chain/jsonrpc/src/: lib.rs  metrics.rs
chain/pool/: Cargo.toml  README.md
chain/pool/src/: lib.rs  metrics.rs  types.rs
chain/rosetta-rpc/: Cargo.toml  README.md  nearprotocol-localnet.ros  nearprotocol-mainnet.ros  nearprotocol-testnet.ros  rosetta-localnet.cfg  rosetta-mainnet.cfg  rosetta-testnet.cfg
chain/rosetta-rpc/src/: errors.rs  lib.rs  models.rs  types.rs  utils.rs
chain/telemetry/: Cargo.toml  README.md
chain/telemetry/src/: lib.rs  metrics.rs
core/chain-configs/: Cargo.toml  README.md
core/chain-configs/src/: client_config.rs  genesis_config.rs  genesis_validate.rs
core/primitives-core/: Cargo.toml
core/primitives-core/src/: account.rs  config.rs  hash.rs  logging.rs
genesis-tools/genesis-csv-to-json/: Cargo.toml
genesis-tools/genesis-csv-to-json/res/: test_accounts.csv
genesis-tools/genesis-csv-to-json/src/: csv_parser.rs  csv_to_json_configs.rs  main.rs  serde_with.rs
genesis-tools/genesis-populate/: Cargo.toml
genesis-tools/genesis-populate/src/: lib.rs  main.rs  state_dump.rs
genesis-tools/keypair-generator/: Cargo.toml
genesis-tools/keypair-generator/src/: main.rs
hktd/: Cargo.toml  build.rs
hktd/src/: cli.rs  log_config_watcher.rs  main.rs
integration-tests/: Cargo.toml
integration-tests/src/: genesis_helpers.rs  runtime_utils.rs
integration-tests/src/node/: mod.rs  process_node.rs  runtime_node.rs  thread_node.rs
integration-tests/src/tests/: mod.rs  test_errors.rs  test_simple.rs  test_tps_regression.rs
integration-tests/src/user/: mod.rs  rpc_user.rs  runtime_user.rs
nearcore/: Cargo.toml
nearcore/benches/: store.rs
nearcore/res/: example-config-gc.json  example-config-no-gc.json
nearcore/src/: config.rs  download_file.rs  lib.rs  metrics.rs  migrations.rs  shard_tracker.rs
nearcore/src/runtime/: errors.rs  mod.rs
nearcore/tests/: economics.rs
runtime/near-vm-errors/: Cargo.toml  README.md
runtime/near-vm-errors/src/: lib.rs
runtime/near-vm-logic/: Cargo.toml  README.md
runtime/near-vm-logic/src/: alt_bn128.rs  context.rs  dependencies.rs  gas_counter.rs  lib.rs  logic.rs  receipt_manager.rs  types.rs  utils.rs
runtime/near-vm-runner/: Cargo.toml  FAQ.md  README.md  RUNTIMES.md
runtime/near-vm-runner/fuzz/: Cargo.toml
runtime/near-vm-runner/src/: cache.rs  errors.rs  imports.rs  instrument.rs  lib.rs  memory.rs  prepare.rs  runner.rs  tests.rs  vm_kind.rs  wasmer2_runner.rs  wasmer_runner.rs  wasmtime_runner.rs
runtime/runtime/: Cargo.toml
runtime/runtime-params-estimator/: .gitignore  Cargo.toml  costs.txt  estimate.sh  setup.sh
runtime/runtime-params-estimator/emu-cost/: README.md  io_cost.sh
runtime/runtime-params-estimator/estimator-warehouse/: Cargo.toml  README.md
runtime/runtime-params-estimator/src/: config.rs  cost.rs  cost_table.rs  costs_to_runtime_config.rs  estimator_context.rs  estimator_params.rs  function_call.rs  gas_cost.rs  gas_metering.rs  lib.rs  main.rs  qemu.rs  rocksdb.rs  testbed.rs  transaction_builder.rs  trie.rs  utils.rs  vm_estimator.rs
runtime/runtime/src/: actions.rs  adapter.rs  balance_checker.rs  config.rs  ext.rs  genesis.rs  lib.rs  metrics.rs  prefetch.rs  verifier.rs
runtime/runtime/tests/: test_async_calls.rs
test-utils/logger/: Cargo.toml
test-utils/runtime-tester/: Cargo.toml
test-utils/runtime-tester/fuzz/: Cargo.toml
test-utils/runtime-tester/src/: fuzzing.rs  lib.rs  run_test.rs  scenario_builder.rs
(+380 files in other folders)
