[package]
name = "integration-tests"
version = "0.0.0"
authors = ["hkt Inc <hello@hktprotocol.com>"]
publish = false
# Please update rust-toolchain.toml as well when changing version here:
rust-version = "1.63.0"
edition = "2021"

[dependencies]
actix = "0.13.0"
actix-rt = "2"
anyhow = "1.0.55"
borsh = "0.9"
chrono = { version = "0.4.4", features = ["serde"] }
clap = { version = "3.1.6", features = ["derive"] }
futures = "0.3"
hex = "0.4"
once_cell = "1.5"
parking_lot = "0.12.1"
primitive-types = { version = "0.10", default-features = false }
rand = "0.7"
smart-default = "0.6"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tempfile = "3"
tokio = { version = "1.1", features = ["net", "rt-multi-thread"] }
tracing = "0.1.13"
wat = "1.0"

hkt-actix-test-utils = { path = "../test-utils/actix-test-utils" }
hkt-chain = { path = "../chain/chain" }
hkt-chain-configs = { path = "../core/chain-configs" }
hkt-chunks = { path = "../chain/chunks" }
hkt-client = { path = "../chain/client" }
hkt-client-primitives = { path = "../chain/client-primitives" }
hkt-crypto = { path = "../core/crypto" }
hkt-epoch-manager = { path = "../chain/epoch-manager"}
hkt-jsonrpc = { path = "../chain/jsonrpc" }
hkt-jsonrpc-client = { path = "../chain/jsonrpc/client" }
hkt-jsonrpc-primitives = { path = "../chain/jsonrpc-primitives" }
hkt-network = { path = "../chain/network" }
hkt-network-primitives = { path = "../chain/network-primitives" }
hkt-primitives = { path = "../core/primitives" }
hkt-primitives-core = { path = "../core/primitives-core" }
hkt-store = { path = "../core/store" }
hkt-o11y = { path = "../core/o11y" }
hkt-telemetry = { path = "../chain/telemetry" }
hkt-test-contracts = { path = "../runtime/hkt-test-contracts" }
hkt-performance-metrics = { path = "../utils/hkt-performance-metrics" }
hkt-vm-errors = { path = "../runtime/hkt-vm-errors" }
hkt-vm-runner = { path = "../runtime/hkt-vm-runner" }
hktcore = { path = "../hktcore" }
node-runtime = { path = "../runtime/runtime" }
testlib = { path = "../test-utils/testlib" }

[dev-dependencies]
assert_matches = "1.3"
insta = "1"

[features]
performance_stats = [
  "hktcore/performance_stats",
  "hkt-network/performance_stats",
]
expensive_tests = []
test_features = ["hktcore/test_features"]
protocol_feature_fix_contract_loading_cost = [
  "hktcore/protocol_feature_fix_contract_loading_cost",
]
protocol_feature_reject_blocks_with_outdated_protocol_version = [
  "hkt-primitives/protocol_feature_reject_blocks_with_outdated_protocol_version",
  "hkt-chain/protocol_feature_reject_blocks_with_outdated_protocol_version"
]
protocol_feature_flat_state = ["hktcore/protocol_feature_flat_state"]
nightly = [
  "nightly_protocol",
  "hktcore/nightly",
  "protocol_feature_fix_contract_loading_cost",
  "protocol_feature_reject_blocks_with_outdated_protocol_version"
]
nightly_protocol = ["hktcore/nightly_protocol"]
sandbox = [
  "hkt-chain/sandbox",
  "node-runtime/sandbox",
  "hkt-client/sandbox",
]
no_cache = ["hktcore/no_cache"]
