[package]
name = "hktcore"
version = "1.30.0"
authors = ["hkt Inc <hello@hktprotocol.com>"]
publish = false
# Please update rust-toolchain.toml as well when changing version here:
rust-version = "1.63.0"
edition = "2021"

[dependencies]
anyhow = "1.0.51"
awc = "3.0.0"
actix = "0.13.0"
actix-web = "4.0.1"
actix-rt = "2"
byteorder = "1.2"
easy-ext = "0.2"
chrono = { version = "0.4.4", features = ["serde"] }
futures = "0.3"
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5.0"
once_cell = "1.5.2"
rand = "0.7"
rayon = "1.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_ignored = "0.1"
dirs = "3"
borsh = "0.9"
thiserror = "1.0"
tokio = { version = "1.1", features = ["fs"] }
tracing = "0.1.13"
smart-default = "0.6"
num-rational = { version = "0.3", features = ["serde"] }
hkt-rust-allocator-proxy = { version = "0.4", optional = true }
tempfile = "3"
indicatif = "0.15.0"
xz2 = "0.1.6"
rlimit = "0.7"
strum = "0.24"

hkt-chain = { path = "../chain/chain" }
hkt-chain-configs = { path = "../core/chain-configs" }
hkt-chunks = { path = "../chain/chunks" }
hkt-client = { path = "../chain/client" }
hkt-client-primitives = {path = "../chain/client-primitives"}
hkt-crypto = { path = "../core/crypto" }
hkt-epoch-manager = { path = "../chain/epoch-manager" }
hkt-jsonrpc = { path = "../chain/jsonrpc", optional = true }
hkt-mainnet-res = { path = "../utils/mainnet-res" }
hkt-network = { path = "../chain/network" }
hkt-network-primitives = { path = "../chain/network-primitives" }
hkt-o11y = { path = "../core/o11y" }
hkt-performance-metrics = { path = "../utils/hkt-performance-metrics" }
hkt-pool = { path = "../chain/pool" }
hkt-primitives = { path = "../core/primitives" }
hkt-rosetta-rpc = { path = "../chain/rosetta-rpc", optional = true }
hkt-store = { path = "../core/store" }
hkt-telemetry = { path = "../chain/telemetry" }
hkt-vm-runner = { path = "../runtime/hkt-vm-runner"}
node-runtime = { path = "../runtime/runtime" }

delay-detector = { path = "../tools/delay-detector" }

[dev-dependencies]
bencher = "0.1.5"
hkt-actix-test-utils = { path = "../test-utils/actix-test-utils" }
testlib = { path = "../test-utils/testlib" }
hkt-jsonrpc-primitives = { path = "../chain/jsonrpc-primitives" }
primitive-types = { version = "0.10", default-features = false }

[[bench]]
name = "store"
harness = false

[features]
default = ["json_rpc", "rosetta_rpc"]

performance_stats = [
  "hkt-performance-metrics/performance_stats",
  "hkt-rust-allocator-proxy",
]
memory_stats = ["hkt-performance-metrics/memory_stats"]
c_memory_stats = ["hkt-performance-metrics/c_memory_stats"]
test_features = [
  "hkt-client/test_features",
  "hkt-network/test_features",
  "hkt-store/test_features",
  "hkt-jsonrpc/test_features"
]
expensive_tests = [
  "hkt-client/expensive_tests",
  "hkt-epoch-manager/expensive_tests",
  "hkt-chain/expensive_tests",
]
no_cache = [
  "node-runtime/no_cache",
  "hkt-store/no_cache",
  "hkt-chain/no_cache",
  "hkt-epoch-manager/no_cache",
]
delay_detector = ["hkt-client/delay_detector", "delay-detector/delay_detector"]
rosetta_rpc = ["hkt-rosetta-rpc"]
json_rpc = ["hkt-jsonrpc"]
protocol_feature_fix_staking_threshold = [
  "hkt-primitives/protocol_feature_fix_staking_threshold",
  "hkt-epoch-manager/protocol_feature_fix_staking_threshold",
]
protocol_feature_fix_contract_loading_cost = [
  "hkt-vm-runner/protocol_feature_fix_contract_loading_cost",
]
protocol_feature_flat_state = ["hkt-store/protocol_feature_flat_state", "hkt-chain/protocol_feature_flat_state", "node-runtime/protocol_feature_flat_state"]

nightly = [
  "nightly_protocol",
  "hkt-primitives/nightly",
  "hkt-client/nightly",
  "hkt-epoch-manager/nightly",
  "hkt-store/nightly",
  "protocol_feature_fix_staking_threshold",
  "protocol_feature_fix_contract_loading_cost",
]
nightly_protocol = [
  "hkt-primitives/nightly_protocol",
  "hkt-jsonrpc/nightly_protocol",
]

# Force usage of a specific wasm vm irrespective of protocol version.
force_wasmer2 = ["hkt-vm-runner/force_wasmer2"]
force_wasmer0 = ["hkt-vm-runner/force_wasmer0"]
force_wasmtime = ["hkt-vm-runner/force_wasmtime"]

sandbox = [
  "hkt-client/sandbox",
  "node-runtime/sandbox",
  "hkt-jsonrpc/sandbox",
]
io_trace = ["hkt-vm-runner/io_trace"]

shardnet = ["hkt-network/shardnet"]
