[package]
name = "hkt-chain-primitives"
version = "0.0.0"
authors = ["hkt Inc <hello@hktprotocol.com>"]
publish = true
# Please update rust-toolchain.toml as well when changing version here:
rust-version = "1.63.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/hkt/hktcore"
description = "This crate hosts hkt chain-related error types"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.4", features = ["serde"] }
tracing = "0.1.13"
thiserror = "1.0"

hkt-primitives = { path = "../../core/primitives" }
hkt-crypto = { path = "../../core/crypto" }
