[package]
name = "hkt-chunks-primitives"
version = "0.0.0"
authors = ["hkt Inc <hello@hktprotocol.com>"]
publish = true
# Please update rust-toolchain.toml as well when changing version here:
rust-version = "1.63.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/hkt/hktcore"
description = "This crate hosts hkt chunks-related error types"

[dependencies]
hkt-chain-primitives = { path = "../chain-primitives" }
hkt-primitives = { path = "../../core/primitives" }
