[package]
name = "hkt-client-primitives"
version = "0.0.0"
authors = ["hkt Inc <hello@hktprotocol.com>"]
publish = true
# Please update rust-toolchain.toml as well when changing version here:
rust-version = "1.63.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/hkt/hktcore"
description = "This crate hosts hkt client-related error types"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.13.1"
actix = "0.13.0"
chrono = { version = "0.4.4", features = ["serde"] }
strum = { version = "0.24", features = ["derive"] }
thiserror = "1.0"
serde_json = "1"
serde = { version = "1", features = ["derive"] }



hkt-chain-primitives = { path = "../chain-primitives" }
hkt-chain-configs = { path = "../../core/chain-configs" }

hkt-chunks-primitives = { path = "../chunks-primitives" }
hkt-crypto = { path = "../../core/crypto" }
hkt-network-primitives = { path = "../network-primitives" }
hkt-primitives = { path = "../../core/primitives" }

[features]
sandbox = []
