[package]
name = "hkt-indexer-primitives"
version = "0.0.0"
authors = ["hkt Inc <hello@hktprotocol.com>"]
publish = true
# Please update rust-toolchain.toml as well when changing version here:
rust-version = "1.63.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/hkt/hktcore"
description = "This crate hosts structures for the hkt Indexer Framework types"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = [ "derive" ] }
serde_json = "1.0.55"

hkt-primitives = { path = "../../core/primitives" }
