[package]
name = "hkt-indexer"
version = "0.0.0"
authors = ["hkt Inc <hello@hktprotocol.com>"]
publish = false
# Please update rust-toolchain.toml as well when changing version here:
rust-version = "1.63.0"
edition = "2021"

[dependencies]
actix = "0.13.0"
anyhow = "1.0.51"
async-recursion = "0.3.2"
tracing = "0.1.13"
futures = "0.3.5"
rocksdb = { version = "0.18.0", default-features = false, features = [
  "snappy",
  "lz4",
  "zstd",
  "zlib",
  "jemalloc",
] }
once_cell = "1.5.2"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1.0.55"
tokio = { version = "1.1", features = ["time", "sync"] }

hktcore = { path = "../../hktcore" }
hkt-client = { path = "../client" }
hkt-chain-configs = { path = "../../core/chain-configs" }
hkt-crypto = { path = "../../core/crypto" }
hkt-indexer-primitives = { path = "../indexer-primitives" }
hkt-o11y = { path = "../../core/o11y" }
hkt-primitives = { path = "../../core/primitives" }
hkt-store = { path = "../../core/store" }
node-runtime = { path = "../../runtime/runtime" }

[features]
shardnet = ["hktcore/shardnet", "hkt-client/shardnet", "hkt-primitives/shardnet"]
