[package]
name = "hkt-jsonrpc-primitives"
version = "0.0.0"
authors = ["hkt Inc <hello@hktprotocol.com>"]
publish = true
# Please update rust-toolchain.toml as well when changing version here:
rust-version = "1.63.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/hkt/hktcore"
description = "This crate hosts structures for the hkt JSON RPC Requests, Responses and Error types"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1.0"

hkt-crypto = { path = "../../core/crypto" }
hkt-primitives = { path = "../../core/primitives" }
hkt-chain-configs = { path = "../../core/chain-configs" }
hkt-rpc-error-macro = { path = "../../tools/rpctypegen/macro" }
hkt-client-primitives = { path = "../client-primitives", optional = true }

[features]
full = ["debug_types"]
debug_types = ["hkt-client-primitives"]
test_features = []
