[package]
name = "hkt-pool"
version = "0.0.0"
license = "MIT OR Apache-2.0"
authors = ["hkt Inc <hello@hktprotocol.com>"]
publish = false
# Please update rust-toolchain.toml as well when changing version here:
rust-version = "1.63.0"
edition = "2021"

[dependencies]
borsh = "0.9"
once_cell = "1.5.2"
rand = "0.7"

hkt-crypto = { path = "../../core/crypto" }
hkt-o11y = { path = "../../core/o11y" }
hkt-primitives = { path = "../../core/primitives" }
