[package]
name = "hkt-rosetta-rpc"
version = "0.0.0"
authors = ["hkt Inc <hello@hktprotocol.com>"]
publish = false
# Please update rust-toolchain.toml as well when changing version here:
rust-version = "1.63.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99.9"
hex = "0.4"
strum = { version = "0.24", features = ["derive"] }

awc = "3.0.0"
actix = "0.13.0"
actix-web = "4.0.1"
actix-http = "3.0.4"
actix-cors = "0.6.1"
futures = "0.3.5"
tokio = { version = "1.1", features = ["net", "rt-multi-thread"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
validator = "0.12"

paperclip = { version = "0.7.0", features = ["actix4"] }

hkt-primitives = { path = "../../core/primitives" }
hkt-account-id = { path = "../../core/account-id" }
hkt-crypto = { path = "../../core/crypto" }
hkt-chain-configs = { path = "../../core/chain-configs" }
hkt-client = { path = "../client" }
hkt-client-primitives = { path = "../client-primitives" }
hkt-network = { path = "../network" }


[dev-dependencies]
insta = "1"
hkt-actix-test-utils = { path = "../../test-utils/actix-test-utils" }
