[package]
name = "hkt-telemetry"
version = "0.0.0"
authors = ["hkt Inc <hello@hktprotocol.com>"]
publish = false
# Please update rust-toolchain.toml as well when changing version here:
rust-version = "1.63.0"
edition = "2021"

[dependencies]
actix = "0.13.0"
awc = { version = "3.0.0", features = [ "openssl" ] }
futures = "0.3"
once_cell = "1.5.2"
openssl = { version = "0.10", features = ["vendored"] }
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
tracing = "0.1.13"

hkt-o11y = { path = "../../core/o11y" }
hkt-performance-metrics = { path = "../../utils/hkt-performance-metrics" }
hkt-performance-metrics-macros = { path = "../../utils/hkt-performance-metrics-macros" }
hkt-primitives = { path = "../../core/primitives" }
