[package]
name = "hkt-chain-configs"
version = "0.0.0"
authors = ["hkt Inc <hello@hktprotocol.com>"]
publish = true
# Please update rust-toolchain.toml as well when changing version here:
rust-version = "1.63.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/hkt/hktcore"
description = "This crate provides typed interfaces to the hkt Genesis and Chain Configs"

[dependencies]
chrono = { version = "0.4.4", features = ["serde"] }
derive_more = "0.99.3"
num-rational = { version = "0.3", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
smart-default = "0.6"
tracing = "0.1.13"
anyhow = "1.0.51"

hkt-crypto = { path = "../crypto" }
hkt-primitives = { path = "../primitives" }

[features]
default = []
