[package]
name = "keypair-generator"
version = "0.0.0"
authors = ["hkt Inc <hello@hktprotocol.com>"]
publish = false
# Please update rust-toolchain.toml as well when changing version here:
rust-version = "1.63.0"
edition = "2021"

[dependencies]
clap = { version = "3.1.6", features = ["derive"] }

hktcore = { path = "../../hktcore" }
hkt-crypto = { path = "../../core/crypto" }
