[package]
name = "hkt-vm-errors"
version = "0.0.0"
authors = ["hkt Inc <hello@hktprotocol.com>"]
publish = true
# Please update rust-toolchain.toml as well when changing version here:
rust-version = "1.63.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
categories = ["wasm"]
repository = "https://github.com/hkt/hktcore"
description = """
Error that can occur inside hkt Runtime encapsulated in a separate crate. Might merge it later.
"""

[dependencies]
hkt-account-id = { path = "../../core/account-id" }
hkt-rpc-error-macro = { path = "../../tools/rpctypegen/macro" }

borsh = "0.9"
deepsize = { version = "0.2.0", optional = true }
serde = { version = "1", features = ["derive"] }
strum = { version = "0.24", features = ["derive"] }

[features]
dump_errors_schema = ["hkt-rpc-error-macro/dump_errors_schema"]
deepsize_feature = [
  "deepsize",
  "hkt-account-id/deepsize_feature",
]
