[package]
name = "hkt-vm-logic"
version = "0.0.0"
authors = ["hkt Inc <hello@hktprotocol.com>"]
publish = true
# Please update rust-toolchain.toml as well when changing version here:
rust-version = "1.63.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
categories = ["wasm"]
repository = "https://github.com/hkt/hktcore"
description = """
This crate implements the specification of the interface that hkt blockchain exposes to the smart contracts.
"""

[dependencies]
borsh = "0.9"
bs58 = "0.4"
byteorder = "1.2"
ripemd = "0.1.1"
serde = { version = "1", features = ["derive"] }
sha2 = ">=0.8,<=0.10"
sha3 = ">=0.8,<=0.10"
ed25519-dalek = "1"

hkt-crypto = { path = "../../core/crypto" }
hkt-account-id = { path = "../../core/account-id", features = [ "internal_unstable" ] }
hkt-o11y = { path = "../../core/o11y" }
hkt-primitives = { path = "../../core/primitives" }
hkt-primitives-core = { path = "../../core/primitives-core" }
hkt-vm-errors = { path = "../hkt-vm-errors" }

bn = { package = "zeropool-bn", version = "0.5.11", features = [] }
tracing = { version = "0.1.13", optional = true }

[dev-dependencies]
hex = { version = "0.4", features = ["serde"] }
serde_json = { version = "1", features = ["preserve_order"] }


[features]
default = []
protocol_feature_fix_contract_loading_cost = [
    "hkt-primitives/protocol_feature_fix_contract_loading_cost",
]
protocol_feature_ed25519_verify = [
    "hkt-primitives/protocol_feature_ed25519_verify"
]
io_trace = ["tracing"]

# Use this feature to enable counting of fees and costs applied.
costs_counting = []
sandbox = ["tracing","hkt-primitives/sandbox"]
