[package]
name = "hkt-vm-runner"
version = "0.0.0"
authors = ["hkt Inc <hello@hktprotocol.com>"]
publish = false
# Please update rust-toolchain.toml as well when changing version here:
rust-version = "1.63.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
categories = ["wasm"]
repository = "https://github.com/hktprotocol/hktcore"
description = """
This crate implements the specification of the interface that hkt blockchain exposes to the smart contracts.
"""

[dependencies]
borsh = "0.9"
serde = { version = "1", features = ["derive"] }
wasmparser = "0.78"
memoffset = "0.6"


loupe = "0.1"
once_cell = "1.5.2"
parity-wasm = { version = "0.42", default-features = false }
wasmtime = { version = "0.37.0", default-features = false, features = ["cranelift", "wasm-backtrace"], optional = true }
anyhow = { version = "1.0.19", optional = true }
hkt-cache = { path = "../../utils/hkt-cache" }
hkt-vm-logic = { path = "../hkt-vm-logic", default-features = false, features = [] }
hkt-vm-errors = { path = "../hkt-vm-errors" }
hkt-primitives = { path = "../../core/primitives" }
hkt-stable-hasher = { path = "../../utils/hkt-stable-hasher" }
tracing = { version = "0.1", default-features = false }

# Old versions of pwasm-utils we need to preserve backwards compatibility under
# old protocol versions.
pwasm-utils_12 = { package = "pwasm-utils", version = "0.12" }
parity-wasm_41 = { package = "parity-wasm", version = "0.41" }

[target.'cfg(target_arch = "x86_64")'.dependencies]
wasmer-runtime = { version = "0.18.0", features = ["default-backend-singlepass"], default-features = false, package = "wasmer-runtime-hkt", optional = true }
wasmer-runtime-core = { version = "0.18.2", package = "wasmer-runtime-core-hkt", optional = true}

# Use the following for development versions of Wasmer.
# wasmer-types = { package = "wasmer-types-hkt", git = "https://github.com/hkt/wasmer", branch = "hkt-main", optional = true }
# wasmer-compiler-singlepass = { package = "wasmer-compiler-singlepass-hkt", git = "https://github.com/hkt/wasmer", branch = "hkt-main", optional = true }
# wasmer-engine-universal = { package = "wasmer-engine-universal-hkt", git = "https://github.com/hkt/wasmer", branch = "hkt-main", optional = true }
# wasmer-vm = { package = "wasmer-vm-hkt", git = "https://github.com/hkt/wasmer", branch = "hkt-main" }
wasmer-compiler = { package = "wasmer-compiler-hkt", version = "=2.4.0", optional = true }
wasmer-compiler-singlepass = { package = "wasmer-compiler-singlepass-hkt", version = "=2.4.0", optional = true }
wasmer-engine = { package = "wasmer-engine-hkt", version = "=2.4.0", optional = true }
wasmer-engine-universal = { package = "wasmer-engine-universal-hkt", version = "=2.4.0", optional = true, features = ["compiler"] }
wasmer-types = { package = "wasmer-types-hkt", version = "=2.4.0", optional = true }
wasmer-vm = { package = "wasmer-vm-hkt", version = "=2.4.0", optional = true }


[dev-dependencies]
arbitrary = "1"
assert_matches = "1.3"
bolero = "0.6.2"
expect-test = "1.3.0"
hkt-test-contracts = { path = "../hkt-test-contracts" }
rand = "0.8"
wasmprinter = "0.2"
wasm-smith = "0.10"
wat = "1.0.40"

[features]
# all vms enabled for now
default = [
  "wasmer0_vm",
  "wasmtime_vm",
  "wasmer2_vm",
]
wasmer0_vm = [ "wasmer-runtime", "wasmer-runtime-core" ]
wasmtime_vm = [ "wasmtime", "anyhow"]
wasmer2_vm = [
    "wasmer-compiler",
    "wasmer-compiler-singlepass",
    "wasmer-engine",
    "wasmer-engine-universal",
    "wasmer-types",
    "wasmer-vm"
]

# Force usage of a specific wasm vm irrespective of protocol version.
force_wasmer0 = ["wasmer0_vm"]
force_wasmtime = ["wasmtime_vm"]
force_wasmer2 = ["wasmer2_vm"]

no_cpu_compatibility_checks = []

no_cache = []

protocol_feature_fix_contract_loading_cost = [
    "hkt-primitives/protocol_feature_fix_contract_loading_cost",
    "hkt-vm-logic/protocol_feature_fix_contract_loading_cost",
]

nightly = [
    "hkt-primitives/nightly",
    "protocol_feature_fix_contract_loading_cost",
    "protocol_feature_ed25519_verify",
]
sandbox = ["hkt-vm-logic/sandbox"]
io_trace = ["hkt-vm-logic/io_trace"]

protocol_feature_ed25519_verify = [
    "hkt-primitives/protocol_feature_ed25519_verify",
    "hkt-vm-logic/protocol_feature_ed25519_verify"
] 

[package.metadata.cargo-udeps.ignore]
# `no_cache` feature leads to an unused `cached` crate
normal = ["cached"]
