[package]
name = "node-runtime"
version = "0.0.0"
license = "MIT OR Apache-2.0"
authors = ["hkt Inc <hello@hktprotocol.com>"]
publish = false
# Please update rust-toolchain.toml as well when changing version here:
rust-version = "1.63.0"
edition = "2021"

[dependencies]
byteorder = "1.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1.13"
rand = "0.7"
once_cell = "1.5.2"
num-rational = "0.3"
num-bigint = "0.3"
num-traits = "0.2.11"
hex = "0.4.2"
rayon = "1.5"
thiserror = "1.0"
sha2 = "0.10"

borsh = "0.9"

hkt-chain-configs = { path = "../../core/chain-configs" }
hkt-crypto = { path = "../../core/crypto" }
hkt-primitives = { path = "../../core/primitives" }
hkt-store = { path = "../../core/store" }
hkt-o11y = { path = "../../core/o11y" }
hkt-vm-logic = { path = "../../runtime/hkt-vm-logic" }
hkt-vm-runner = { path = "../../runtime/hkt-vm-runner" }
hkt-vm-errors = { path = "../../runtime/hkt-vm-errors" }

[features]
default = []
dump_errors_schema = ["hkt-vm-errors/dump_errors_schema"]
protocol_feature_flat_state = ["hkt-store/protocol_feature_flat_state"]
no_cpu_compatibility_checks = ["hkt-vm-runner/no_cpu_compatibility_checks"]

no_cache = [
  "hkt-vm-runner/no_cache",
  "hkt-store/no_cache",
]

sandbox = ["hkt-vm-logic/sandbox", "hkt-vm-runner/sandbox"]

[dev-dependencies]
tempfile = "3"
serde_json = "^1.0.40"
indicatif = {version = "0.15.0", features = ["with_rayon"]}
rayon = "^1.1"
assert_matches = "1.3"

testlib = { path = "../../test-utils/testlib" }
hkt-chain-configs = { path = "../../core/chain-configs" }
hkt-test-contracts = { path = "../../runtime/hkt-test-contracts" }
hkt-store = { path = "../../core/store", features = ["test_features"] }
