[package]
name = "hkt-logger-utils"
version = "0.0.0"
authors = ["hkt Inc <hello@hktprotocol.com>"]
publish = false
# Please update rust-toolchain.toml as well when changing version here:
rust-version = "1.63.0"
edition = "2021"

[dependencies]
tracing = "0.1.13"
hkt-o11y = { path = "../../core/o11y" }
